Add education editor

--- a/src/styles/EditorBlock.css
+++ b/src/styles/EditorBlock.css
@@ -1,8 +1,9 @@
 form {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
+    flex-direction: column;
 }
 
-.row > button {
+h2 + button,
+h3 + button {
     margin-left: auto;
 }
