--- a/src/styles/Editor.css
+++ b/src/styles/Editor.css
@@ -1,4 +1,12 @@
-.Editor > div {
-    display: flex;
-    flex-direction: column;   
+.Editor {
+    font-family: "Roboto", sans-serif;
+
+    > div {
+        display: flex;
+        flex-direction: column;
+
+        + div {
+            margin-top: 0.5lh;
+        }
+    }
 }
