--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+:root {
+    --body-background-color: #F9F9FB;
+}
+
 * {
-    box-sizing: content-box;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -7,17 +11,35 @@
 body {
     font-family: "Cambria", serif;
     font-size: 16px;
+    background-color: var(--body-background-color);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+
+    >* + * {
+        margin-top: 0.5lh;
+    }
+}
+
+label {
+    display: flex;
+    flex-direction: column;
+}
+
+fieldset {
+    border: none;
 }
 
 .App {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
     min-height: 100vh;
     padding: 1em;
     gap: 1em;
-
-    >div {
-        width: 45%;
-    }
 }
 
 /* h1 {
@@ -32,4 +54,6 @@ h2, h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    gap: 1em;
 }
