--- a/src/styles/CollapsibleBlock.css
+++ b/src/styles/CollapsibleBlock.css
@@ -1,21 +1,54 @@
 .CollapsibleBlock {
+    --title-border-radius: 0.5em;
+
+    border: 1px solid black;
+    border-radius: var(--title-border-radius);
+    width: 100%;
+
     h2 + button,
     h3 + button {
         margin-left: auto;
     }
 
-    > .content {
-        form {
+    button {
+        background: none;
+        border: none;        
+    }
+
+    &.active {
+        >.content {
             display: flex;
             flex-direction: column;
+            align-items: center;
+            gap: 0.5lh;
         }
 
-        &.active {
-            display: inherit;
+        >.title {
+            border-radius: var(--title-border-radius) var(--title-border-radius) 0 0;
+        }
+    }
+
+    &.hidden {
+        >.content {
+           display: none; 
         }
 
-        &.hidden {
-            display: none;
+        >.title {
+            border-radius: var(--title-border-radius);
+        }
+    }
+
+    > .content {
+        padding: 0.5lh 0.5em;
+    }
+
+    > .title {
+        background: #1565c0;
+        color: #F9F9FB;
+        padding: 1% 1em 1% 0.5em;
+
+        button {
+            color: white;
         }
     }
 }
