--- a/src/components/Editor/CollapsibleBlock.css
+++ b/src/components/Editor/CollapsibleBlock.css
@@ -1,28 +1,18 @@
 .CollapsibleBlock {
     --title-border-radius: 0.5em;
+    --title-background-color: #1565c0;
+    --title-text-color: #F9F9FB;
 
     border: 1px solid black;
     border-radius: var(--title-border-radius);
     width: 100%;
 
-    h2 + button,
-    h3 + button {
+    h2+button,
+    h3+button {
         margin-left: auto;
     }
 
-    button {
-        background: none;
-        border: none;        
-    }
-
     &.active {
-        >.content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5lh;
-        }
-
         >.title {
             border-radius: var(--title-border-radius) var(--title-border-radius) 0 0;
         }
@@ -30,7 +20,7 @@
 
     &.hidden {
         >.content {
-           display: none; 
+            display: none;
         }
 
         >.title {
@@ -38,17 +28,21 @@
         }
     }
 
-    > .content {
+    >.content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5lh;
         padding: 0.5lh 0.5em;
     }
 
-    > .title {
-        background: #1565c0;
-        color: #F9F9FB;
-        padding: 1% 1em 1% 0.5em;
+    >.title {
+        background: var(--title-background-color);
+        color: var(--title-text-color);
+        padding: 0.25lh 0 0.25lh 0.5em;
 
         button {
-            color: white;
+            color: var(--title-text-color);
         }
     }
 }
