--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -1,8 +1,12 @@
 .Editor {
     font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5lh;
 
-    >div+div {
-        margin-top: 0.5lh;
+    >div {
+        width: 100%;
     }
 
     .row {
@@ -25,6 +29,12 @@
         }
 
         &.button-new-entry {
+            background-color: #54A454;
+            color: #F9F9FB;
+        }
+
+        &.button-download {
+            height: 3em;
             background-color: #54A454;
             color: #F9F9FB;
         }
