Add clear resume function

--- a/src/components/Editor/CollapsibleBlock.css
+++ b/src/components/Editor/CollapsibleBlock.css
@@ -42,6 +42,7 @@
         padding: 0.25lh 0 0.25lh 0.5em;
 
         button {
+            background: none;
             color: var(--title-text-color);
         }
     }
