--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,37 @@ body {
     word-wrap: anywhere;
 }
 
+.dialog {
+    padding: 2em;
+    text-align: center;
+    font-size: 1.2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.dialog-buttons {
+    margin-top: 1em;
+
+    display: flex;
+    gap: 1em;
+}
+
+.dialog-buttons button {
+    padding: 0.5em;
+}
+
+
+dialog:not([open]) {
+    display: none;
+}
+
 .row {
     display: flex;
     flex-direction: row;
